--- a/javascript/array function.html
+++ b/javascript/array function.html
@@ -9,7 +9,7 @@
 	</div>
 
 	<script type="text/javascript">
-		//array function.. it is the short form of making function. i.e ()=>{};
+		//arrow function.. it is the short form of making function. i.e ()=>{};
 		// let about=()=>{
 		// 	console.log("It's me manish karki.");
 		// }
